(fix) O3-2763: Fix overflow issue affecting multi-select fields (#122)
* (fix) O3-2763: Fixed form page height

* (fix) O3-2763: Fixed form overflow

---------

--- a/projects/ngx-formentry/src/components/ngx-tabset/components/ngx-tab-set.component.scss
+++ b/projects/ngx-formentry/src/components/ngx-tabset/components/ngx-tab-set.component.scss
@@ -118,7 +118,3 @@
   display: grid;
   grid-template-columns: 179px auto;
 }
-
-.tab-content {
-  overflow-x: hidden;
-}
